# AI-Assisted_Seal_Photograph_Image_Processing_and_Correction_System_in_Rust

./: .gitignore  Cargo.toml  README.md
AI-Model/: Cargo.toml
AI-Model/src/: extraction.rs  ip_tests.rs  linear_regression.rs  main.rs  training.rs
AI-Model/src/iteration_2_CNN/: cnn_detection.rs  mod.rs
IP_functions/: Cargo.toml
IP_functions/src/: atmospheric.rs  dcp.rs  dehaze.rs  guided_filter.rs  lib.rs  radiance.rs  transmission.rs
