[package]
name = "ai-model"
version = "0.1.0"
edition = "2021"

[dependencies]
ndarray = "0.17.1"
image = "0.25.9"
IP_functions = { path = "../IP_functions" }
rand = "0.9"
memmap2 = "0.9.9"
rayon = "1.11.0"

# Burn ML framework for CNN - Iteration 2
burn = { version = "0.16", features = ["train", "ndarray"] }
burn-ndarray = "0.16"
